login gap fixed ish..

--- a/src/Donation/donation.css
+++ b/src/Donation/donation.css
@@ -8,6 +8,7 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
+  border
 }
 
 
@@ -70,7 +71,7 @@ nav {
 }
 
 input[type="text"]:focus {
-  color: #fff;
+  color: rgb(0, 0, 0);
   outline: 0;
 }
 
